testsuite/tests/properties/invalid_super/overridden_abstract.lkt
import common

class FooNode implements Node[FooNode] {
    @export @abstract fun p(): Int
}

class Example: FooNode implements TokenNode {
    @export fun p(): Int = node.super() + 1
}

class Number: FooNode implements TokenNode {
    @export fun p(): Int = 0
}
